--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "client-trail-project",
+  "homepage:"www.google.com:,
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
