--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client-trail-project",
-  "homepage:"www.google.com:,
+ "homepage": ".",
   
   "version": "0.1.0",
   "private": true,
